--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.3",
+    "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "react": "^18",
