--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "gsap": "^3.12.3",
     "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.294.0",
-    "mdb-react-ui-kit": "^7.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
+    "sass": "^1.70.0",
     "styled-components": "^6.1.6",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
