--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
